--- a/css_anim/a.html
+++ b/css_anim/a.html
@@ -10,6 +10,29 @@
   100% {transform: scale(1);}
 }
 
+@keyframes wobble_out {
+  0% {transform: scaleX(0.90);}
+  5% {transform: scaleX(1);}
+  10% {transform: scaleX(0.9);}
+  25% {transform: scaleX(1);}
+  30% {transform: scaleX(0.9);}
+  35% {transform: scaleX(1);}
+  40% {transform: scaleX(0.9);}
+  45% {transform: scaleX(1);}
+  48% {transform: scaleX(0.9);}
+  51% {transform: scaleX(1);}
+  54% {transform: scaleX(0.9);}
+  57% {transform: scaleX(1);}
+  60% {transform: scaleX(0.9);}
+  62% {transform: scaleX(1);}
+  64% {transform: scaleX(0.9);}
+  66% {transform: scaleX(1);}
+  67% {transform: scaleX(0.9);}
+  68% {transform: scaleX(0.9);}
+  69% {transform: scaleX(1);}
+  100% {transform: scale(0);}
+}
+
 div.row {
   display: flex;
   flex-flow: row;
@@ -43,54 +66,71 @@ div.wobble {
   animation: wobble 0.6s linear;
 }
 
+div.wobble_out {
+  border: 2px solid black;
+  animation: wobble_out 1s linear;
+}
+
 </style>
 <script>
 var c = 0;
 
 function blah() {
-   level_0 = document.getElementById("level_0");
    new_div = document.createElement("div");
    new_div.setAttribute("class", "wobble level_0");
-   new_div.setAttribute("id", "bubble_" + c);
    new_div.innerHTML = String.fromCharCode(64 + c);
-   level_0.appendChild(new_div);
    c++;
 
-   level = 1;
-   while(level_0.children.length === 6) {
-      new_div = document.createElement("div");
-      new_div.setAttribute("class", "wobble level_" + level);
-      nested_div = document.createElement("div");
-      nested_div.setAttribute("style", "position: relative; height: 100%;");
-      new_div.appendChild(nested_div);
+   move_nodes(0, new_div);
+}
 
-      nested2 = document.createElement("div");
-      nested2.setAttribute("style", "position: absolute; bottom: 60%; left: 33.333%;");
-      nested2.appendChild(level_0.children[1]);
-      nested_div.appendChild(nested2);
-
-      nested2 = document.createElement("div");
-      nested2.setAttribute("style", "position: absolute; top: 50%; right: 55%;");
-      nested2.appendChild(level_0.children[1]);
-      nested_div.appendChild(nested2);
-
-      nested2 = document.createElement("div");
-      nested2.setAttribute("style", "position: absolute; top: 50%; left: 55%;");
-      nested2.appendChild(level_0.children[1]);
-      nested_div.appendChild(nested2);
-
-      level_0 = document.getElementById("level_" + level);
-      if (!level_0) {
-         level_0 = document.createElement("div");
-         level_0.setAttribute("id", "level_" + level);
-         level_0.setAttribute("class", "row");
-         document.getElementById("canvas").appendChild(level_0);
-      }
-      level++;
-      level_0.appendChild(new_div);
+function move_nodes(level, new_div) {
+   level_0 = document.getElementById("level_" + level);
+   if (!level_0) {
+      level_0 = document.createElement("div");
+      level_0.setAttribute("id", "level_" + level);
+      level_0.setAttribute("class", "row");
+      document.getElementById("canvas").appendChild(level_0);
    }
+   level_0.appendChild(new_div);
 
-   if (c < 30) {
+   if (level_0.children.length === 6) {
+      setTimeout(function() {
+         curr_class = level_0.children[1].getAttribute("class");
+         for (i = 1; i < 4; i++) {
+            level_0.children[i].setAttribute("class", "wobble_out level_" + level);
+         }
+
+         setTimeout(function() {
+            level++;
+            new_div = document.createElement("div");
+            new_div.setAttribute("class", "wobble level_" + level);
+            nested_div = document.createElement("div");
+            nested_div.setAttribute("style", "position: relative; height: 100%;");
+            new_div.appendChild(nested_div);
+
+            nested2 = document.createElement("div");
+            nested2.setAttribute("style", "position: absolute; bottom: 60%; left: 33.333%;");
+            level_0.children[1].setAttribute("class", curr_class);
+            nested2.appendChild(level_0.children[1]);
+            nested_div.appendChild(nested2);
+
+            nested2 = document.createElement("div");
+            nested2.setAttribute("style", "position: absolute; top: 50%; right: 55%;");
+            level_0.children[1].setAttribute("class", curr_class);
+            nested2.appendChild(level_0.children[1]);
+            nested_div.appendChild(nested2);
+
+            nested2 = document.createElement("div");
+            nested2.setAttribute("style", "position: absolute; top: 50%; left: 55%;");
+            level_0.children[1].setAttribute("class", curr_class);
+            nested2.appendChild(level_0.children[1]);
+            nested_div.appendChild(nested2);
+
+            move_nodes(level, new_div);
+         }, 1000);
+      }, 600);
+   } else if (c < 30) {
       setTimeout(blah, 1000);
    }
 }
@@ -99,8 +139,6 @@ function blah() {
 </head>
 <body>
 <div id="canvas">
-<div id="level_0" class="row">
-</div>
 </div>
 </body>
 </html>
